# jarvis-os

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: Dockerfile  config.py  main.py  pyproject.toml
apps/api/routers/: __init__.py  agents.py  chat.py  health.py  logs.py  memory.py  models.py  projects.py  tools.py
apps/web/app/: globals.css  layout.tsx
apps/web/app/agents/: page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/memory/: page.tsx
apps/web/app/projects/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/tools/: page.tsx
apps/web/components/: Sidebar.tsx
apps/web/src/app/: globals.css
docs/: agent-design.md  architecture.md  build-roadmap.md  model-routing.md  project-agents.md  security.md
scripts/: start-dev.bat  start-dev.sh
