[tool.poetry]
name = "jarvis-api"
version = "0.1.0"
description = "JARVIS OS API - Phase 1"
authors = ["Rudi <skhosanasv01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
pydantic = "^2.10"
pydantic-settings = "^2.7"
sqlalchemy = "^2.0"
asyncpg = "^0.30"
alembic = "^1.14"
redis = "^5.2"
qdrant-client = "^1.13"
httpx = "^0.28"
python-dotenv = "^1.0"
openai = "^1.58"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
